# pyrig-pypi

./: .gitignore  Containerfile  README.md  mkdocs.yml  prek.toml  pyproject.toml
.github/: configure.sh  settings.json
.github/workflows/: build.yml  deploy.yml  health_check.yml
docs/: api.md  index.md
src/pyrig_pypi/: __init__.py
src/pyrig_pypi/rig/: __init__.py
src/pyrig_pypi/rig/configs/: __init__.py  pyproject.py
src/pyrig_pypi/rig/configs/remote_version_control/workflows/: deploy.py
src/pyrig_pypi/rig/configs/version_control/: __init__.py
src/pyrig_pypi/rig/configs/version_control/remote/: __init__.py
src/pyrig_pypi/rig/configs/version_control/remote/workflows/: __init__.py  deploy.py
src/pyrig_pypi/rig/tools/: __init__.py  package_index.py  package_manager.py  programming_language.py
tests/test_pyrig_pypi/test_rig/test_configs/: test_pyproject.py
tests/test_pyrig_pypi/test_rig/test_configs/test_remote_version_control/test_workflows/: test_deploy.py
tests/test_pyrig_pypi/test_rig/test_configs/test_version_control/test_remote/test_workflows/: test_deploy.py
tests/test_pyrig_pypi/test_rig/test_tools/: test_package_index.py  test_package_manager.py  test_programming_language.py
tests/test_pyrig_pypi/test_rig/test_tools/test_packages/: test_index.py  test_manager.py
