[project]
name = "pyrig-pypi"
version = "3.1.4"
description = "A pyrig plugin for publishing Python packages to PyPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyrig>=18.3.4",
    "pyrig-runtime>=3.5.2",
]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.urls]
Homepage = "https://github.com/Winipedia/pyrig-pypi"
Documentation = "https://Winipedia.github.io/pyrig-pypi"
Source = "https://github.com/Winipedia/pyrig-pypi"
Issues = "https://github.com/Winipedia/pyrig-pypi/issues"
Changelog = "https://github.com/Winipedia/pyrig-pypi/releases"

[project.scripts]
pyrig-pypi = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "detect-secrets>=1.5.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.5",
    "pip-audit>=2.10.1",
    "prek>=0.4.8",
    "pyrig>=18.3.4",
    "pyrig-codecov>=3.2.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "rumdl>=0.2.30",
    "ty>=0.0.58",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest]
testpaths = [
    "tests",
]
addopts = [
    "--cov=pyrig_pypi",
    "--cov-branch",
    "--cov-fail-under=100",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
filterwarnings = [
    "error",
]
strict = true

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
